fix: Ensure CapabilityHooks world field isn't null on multiplayer clients.